# rusted_social_simulation

./: Cargo.toml  README.md
.github/workflows/: CI.yml
rusted_conversation/: Cargo.toml
rusted_conversation/src/: main.rs
rusted_social_simulation/: Cargo.toml
rusted_social_simulation/src/: lib.rs
rusted_social_simulation/src/social/: action.rs  condition.rs  effect.rs  mod.rs  role.rs  utility.rs
rusted_social_simulation/src/social/practice/: mod.rs  role.rs  simple.rs
