[package]
name = "rusted_conversation"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusted_social_simulation = { path = "../rusted_social_simulation" }